base/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: kafka
